<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/iv_dice"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_for_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/iv_dice2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_for_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/dice_1" />

    <Button
        android:id="@+id/button"
        android:layout_width="108dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/rokkitt_bold"
        android:text="@string/roll_the_dice"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/iv_dice2"
        app:layout_constraintStart_toEndOf="@+id/iv_dice"
        app:layout_constraintTop_toBottomOf="@+id/iv_dice2" />

    <TextView
        android:id="@+id/tv_result1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/michroma"
        android:text="@string/result1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_dice2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/tv_result2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/michroma"
        android:text="@string/result2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_dice2"
        app:layout_constraintTop_toBottomOf="@+id/tv_result1" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/michroma"
        android:text="@string/result2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_dice2"
        app:layout_constraintTop_toBottomOf="@+id/tv_result2" />

    <TextView
        android:id="@+id/text_result1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/michroma"
        android:text="@string/text_result1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_dice"
        app:layout_constraintTop_toTopOf="@+id/tv_result1" />

    <TextView
        android:id="@+id/text_result2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/michroma"
        android:text="@string/text_result2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_dice"
        app:layout_constraintTop_toTopOf="@+id/tv_result2" />

    <TextView
        android:id="@+id/text_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/michroma"
        android:text="@string/text_total"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_dice"
        app:layout_constraintTop_toTopOf="@+id/tv_total" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="613dp"
        android:layout_height="513dp"
        android:layout_marginTop="145dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dice"
        app:srcCompat="@drawable/line_straight" />

</androidx.constraintlayout.widget.ConstraintLayout>

